<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <!--
  Adding a leading blank line leads to the following
  [FATAL] Non-parseable POM pom.xml:
processing instruction can not have PITarget with reserved xml name (position: START_DOCUMENT seen \r\n<?xml ... @2:7)  @ line 2, column 7 
-->
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.mycompany.app</groupId>
  <artifactId>jmespath_tests</artifactId>
  <packaging>jar</packaging>
  <version>0.1.0-SNAPSHOT</version>
  <name>app</name>
  <url>http://maven.apache.org</url>
  <developers>
    <developer>
      <name>Serguei Kouzmine</name>
      <email>kouzmine_serguei@yahoo.com</email>
      <organization/>
      <organizationUrl>https://github.com/sergueik</organizationUrl>
    </developer>
  </developers>
  <properties>
    <encoding>UTF-8</encoding>
    <project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
    <project.reporting.outputEncoding>${encoding}</project.reporting.outputEncoding>
    <browser.name>chrome</browser.name>
    <hamcrest-all.version>1.3</hamcrest-all.version>
    <hamcrest-date.version>2.0.4</hamcrest-date.version>
    <java.version>1.8</java.version>
    <json.version>20230227</json.version>
    <jackson.version>2.13.1</jackson.version>
    <jackson-databind.version>${jackson.version}</jackson-databind.version>
    <json-path.version>2.9.0</json-path.version>
    <jsoup.version>1.15.3</jsoup.version>
    <junit.version>4.13.2</junit.version>
    <maven-compiler-plugin.version>3.6.0</maven-compiler-plugin.version>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
    <maven-surefire-plugin.version>2.20</maven-surefire-plugin.version>
    <minimal-json.version>0.9.5</minimal-json.version>
    <junit.version>4.13.1</junit.version>
    <gson.version>2.8.9</gson.version>
    <jmespath.version>0.2.0</jmespath.version>
    <jmespath.adapter>jmespath-jackson</jmespath.adapter>
  </properties>
  <dependencies>
	  	<!-- https://mvnrepository.com/artifact/com.amazonaws/jmespath-java -->
<!-- https://mvnrepository.com/artifact/io.burt/jmespath -->
<dependency>
    <groupId>io.burt</groupId>
    <artifactId>jmespath</artifactId>
    <version>0.2.0</version>
    <type>pom</type>
</dependency>
<dependency>
  <groupId>io.burt</groupId>
  <artifactId>${jmespath.adapter}</artifactId>
  <version>${jmespath.version}</version>
</dependency>

    <dependency>
      <groupId>com.jayway.jsonpath</groupId>
      <artifactId>json-path</artifactId>
      <scope>test</scope>
      <version>${json-path.version}</version>
    </dependency>
    <dependency>
      <groupId>com.eclipsesource.minimal-json</groupId>
      <artifactId>minimal-json</artifactId>
      <version>${minimal-json.version}</version>
    </dependency>
    <dependency>
      <groupId>org.exparity</groupId>
      <artifactId>hamcrest-date</artifactId>
      <version>${hamcrest-date.version}</version>
    </dependency>
    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest-all</artifactId>
      <version>${hamcrest-all.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-core</artifactId>
      <version>${jackson.version}</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-annotations</artifactId>
      <version>${jackson.version}</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>${jackson-databind.version}</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.dataformat</groupId>
      <artifactId>jackson-dataformat-yaml</artifactId>
      <version>${jackson.version}</version>
    </dependency>
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>${gson.version}</version>
      <exclusions>
        <exclusion>
          <!-- exclude side by side versions of guava jar from gson -->
          <groupId>com.google.guava</groupId>
          <artifactId>guava</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
    </dependency>
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven-compiler-plugin.version}</version>
        <goals>
          <goal>compile</goal>
        </goals>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <encoding>${encoding}</encoding>
          <!-- On windows one needs to update console code page outside of maven
to work with cyrillic pages:
chcp 65001
set JAVA_TOOL_OPTIONS=-Dfile.encoding=UTF-8
rem ${encoding}
 -->
          <compilerArgument>-Xlint:all</compilerArgument>
          <compilerArgument>-Xlint:-processing</compilerArgument>
		  <!-- NOTE: some compiler optimizatino flags not recognized on JDK 1.8.0.101 and were added in later builds e.g. 1.8.0.151:  
                  Fatal error compiling: 
                  invalid flag: -XX:+AggressiveUnboxing
                  invalid flag: -XX:+AggressiveOpts
                  invalid flag: -XX:+UnlockExperimentalVMOptions
                  -->
          <!--
          <compilerArgument>-XX:+UnlockExperimentalVMOptions</compilerArgument>
          <compilerArgument>-XX:+AggressiveOpts</compilerArgument>
	  <compilerArgument>-XX:+AggressiveUnboxing</compilerArgument>
	  -->
          <!--
   <compilerArgument>-Dfile.encoding=${encoding}</compilerArgument>
Fatal error compiling: invalid flag: -Dfile.encoding=UTF-8 -> [Help 1]
-->
          <showWarnings>true</showWarnings>
          <showDeprecation>true</showDeprecation>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-dependency-plugin</artifactId>
        <executions>
          <execution>
            <phase>install</phase>
            <goals>
              <goal>copy-dependencies</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.build.directory}/lib</outputDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven-surefire-plugin.version}</version>
        <configuration>
          <trimStackTrace>false</trimStackTrace>
          <encoding>${encoding}</encoding>
          <!--
          NOTE: specifying the suite XML file prevents surefile from scannint all tests casses and execute everything with the method name mask match
          <suiteXmlFiles>
            <suiteXmlFile>src/test/resources/suites/testng.xml</suiteXmlFile>
          </suiteXmlFiles>
          -->
          <!-- For parallel runs with e.g. Vagrant https://github.com/sergueik/selenium-fluxbox
          <argLine>-Dfile.encoding=${encoding} -Dparallel=tests -DthreadCount=2 </argLine>
          -->
          <argLine>-Dfile.encoding=${encoding}</argLine>
          <!-- Skip the default running of this plug-in (or everything is run twice...see below) -->
          <skip>true</skip>
        </configuration>
        <executions>
          <execution>
            <id>unit-tests</id>
            <phase>test</phase>
            <goals>
              <goal>test</goal>
            </goals>
            <configuration>
              <skip>false</skip>
              <systemPropertyVariables>
                <webdriver.driver>${browser.name}</webdriver.driver>
                <selenium.version>${selenium.version}</selenium.version>
                <property.filepath>${property.filepath}</property.filepath>
              </systemPropertyVariables>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <version>${maven-resources-plugin.version}</version>
        <artifactId>maven-resources-plugin</artifactId>
        <configuration>
          <encoding>${encoding}</encoding>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <id>properties</id>
      <properties>
        <!-- https://www.mojohaus.org/properties-maven-plugin/usage.html -->
        <property.filepath>target/classes</property.filepath>
        <username>sergueik2016</username>
        <username>automationnewuser24@gmail.com</username>
        <password>${env.TEST_PASSWORD}</password>
        <!-- when not set will result in the verbatim value 'password' = '${env.TEST_PASSWORD}'-->
      </properties>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>properties-maven-plugin</artifactId>
            <version>1.0.0</version>
            <executions>
              <execution>
                <phase>generate-resources</phase>
                <goals>
                  <goal>write-project-properties</goal>
                </goals>
                <configuration>
                  <outputFile>
                ${project.build.outputDirectory}/test.properties
              </outputFile>
                </configuration>
              </execution>
            </executions>
          </plugin>
          <!-- this maven-surefire-plugin does not seem to be used during the test phase, removed -->
        </plugins>
      </build>
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>
    </profile>
    <profile>
      <id>chrome</id>
      <properties>
        <browser.name>chrome</browser.name>
      </properties>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
    </profile>
    <profile>
      <id>edge</id>
      <properties>
        <browser.name>edge</browser.name>
      </properties>
    </profile>
    <profile>
      <id>firefox</id>
      <properties>
        <browser.name>firefox</browser.name>
      </properties>
    </profile>
    <profile>
      <!-- https://stackoverflow.com/questions/166895/different-dependencies-for-different-build-profiles -->
      <id>yandex</id>
      <properties>
        <browser.name>yandex</browser.name>
      </properties>
      <dependencies>
        <dependency>
          <groupId>com.opera</groupId>
          <artifactId>operadriver</artifactId>
          <version>0.7.3</version>
        </dependency>
      </dependencies>
    </profile>
  </profiles>
  <repositories>
    <repository>
      <id>maven-central</id>
      <name>maven central repo</name>
      <url>https://mvnrepository.com/repos/central</url>
    </repository>
    <repository>
      <id>osgeo</id>
      <name>osgeo repo</name>
      <url>https://download.osgeo.org/webdav/geotools/</url>
    </repository>
    <repository>
      <id>seasar</id>
      <name>seasar repo</name>
      <url>https://www.seasar.org/maven/maven2</url>
    </repository>
    <repository>
      <id>jcenter</id>
      <url>https://jcenter.bintray.com/</url>
    </repository>
    <repository>
      <id>swt-repo</id>
      <url>https://swt-repo.googlecode.com/svn/repo/</url>
    </repository>
    <repository>
      <id>central</id>
      <url>https://repo1.maven.org/maven2/</url>
    </repository>
    <repository>
      <id>consol</id>
      <url>https://labs.consol.de/maven/repository/</url>
    </repository>
    <repository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </repository>
    <repository>
      <id>project.local</id>
      <name>project</name>
      <url>file:${project.basedir}/repo</url>
    </repository>
  </repositories>
</project>
